- do not override bootloader on upgrade (mga#18638)

Version 17.35.1 - 7 June 2016

- fix selecting grub2 on !UEFI

Version 17.35 - 7 June 2016

- fix selecting grub2-efi on UEFI (mga#18646)

Version 17.34.1 - 6 June 2016

- fix displaying release notes with WebKit2

Version 17.34 - 6 June 2016

- bootloader:
  o enable to (un)install os-prober (mga#16010, mga#18538)
  o fix reading back last grub2 entry
  o only overwrite GRUB_CMDLINE_LINUX_DEFAULT on first install (mga#18112)
  o only overwrite install.sh when actually installing boot loader (mga#17455)
  o set GRUB_DEFAULT + GRUB_SAVEDEFAULT (mga#9627, mga#16059)
  o stop offering grub legacy & lilo on new installs (mga#18583)

Version 17.33 - 27 May 2016

- adjust to latest gdb
- list all drivers needing a proprietary driver
- only use vesa on x86

Version 17.32 - 17 May 2016

- remove KDE occurrence after revert of the previous commit

Version 17.31 - 9 May 2016

- replace last KDE occurence with Plasma
- left background for sta1
- list all drivers needing a proprietary driver
- install the right IM packages on Plasma when using fcitx

Version 17.30 - 7 May 2016

- install nonfree firmware for amdgpu, i915, nouveau
- CSD:
  o make corners round like gtk+/Adwaita does
  o nicer decoration

Version 17.29 - 4 May 2016

- install the right IM packages on Plasma
- make CSD support available to forked processes (mga#18332)

Version 17.28 - 26 April 2016

- adapt to new brltty
- drop support for MIPS
- fix detecting running under Qemu
- fix installing packages when having a numeric pad
- recognize new kernel-4.6 drivers

Version 17.27 - 23 April 2016

- add 'qemu' flag for rpmsrate
- exclude 2 Xorg libraries on ARM

Version 17.26.1 - 8 April 2016

- just ignore kernel options
- drakx-in-chroot:
  o enable to control strace behaviour

Version 17.26 - 3 April 2016

- add minimal CSD support (mga#17702)

Version 17.25 - 1 April 2016

- partionning:
  o fix detecting nvme devices as block devices