@@ -1,4 +1,6 @@
 - do not override bootloader on upgrade (mga#18638)
+- debug build:
+  o gdb needs python3 instead of python2 (and guile as well)
 
 Version 17.35.1 - 7 June 2016
 
